# the-narrow-gate

./: .gitignore  requirements.txt
.devcontainer/: devcontainer.json
narrow-gate/: .env  Makefile  pyproject.toml  requirements.txt
narrow-gate/narrow_gate/data/: churches.csv
narrow-gate/narrow_gate/notebooks/: scrape_sched.ipynb
narrow-gate/narrow_gate/notebooks/.ipynb_checkpoints/: scrape_sched-checkpoint.ipynb
narrow-gate/narrow_gate/src/: Main.py  masses.csv
narrow-gate/narrow_gate/src/pages/: Notes_from_the_command-line.py  Notes_from_the_rotationy.py  Notes_from_the_wards.py  Sacrament_Finder.py
narrow-gate/narrow_gate/src/utils/: finder.py  scrape.py
